--- a/Projects/MySecretFolder/MySecretFolder.csproj
+++ b/Projects/MySecretFolder/MySecretFolder.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net6.0-windows</TargetFramework>
-    <RootNamespace>_20_Project_My_Secret_Folder</RootNamespace>
+    <RootNamespace>MySecretFolder</RootNamespace>
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
